compiler/kernc_cli/tests/soundness/run-pass/supertraits/trait_impl_with_where_clause_can_satisfy_supertrait_contract.rn
// exit: 0

trait Marker {};

trait Base {
    fn value() i32;
};

trait Derived: Base {};

struct Ready {};

impl Ready: Marker {}

struct Boxed[T] {
    inner: T,
};

impl[T] &Boxed[T]: Base
    where T: Marker,
{
    fn value() i32 {
        return 7;
    }
}

impl[T] &Boxed[T]: Derived
    where T: Marker,
{}

fn main() i32 {
    let boxed = Boxed[Ready].{ inner: Ready.{}, };
    let derived = &Derived.{ boxed.& };
    return derived.value() - 7;
}
